brandnewproject/src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <externalId>true</externalId>
        <label>Date</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_value__c</fullName>
        <label>Product value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product_id__c</fullName>
        <displayFormat>ID-{000}</displayFormat>
        <label>product id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>